# callscreen

./: .gitignore  .pre-commit-config.yaml  AI Call Screening for Landlines.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/callscreen/: config.py  dependencies.py  main.py
backend/src/callscreen/ai/: llm.py  persona_conversation.py  persona_engine.py
backend/src/callscreen/ai/prompts/: screening.py
backend/src/callscreen/api/v1/: auth.py  calls.py  community.py  contacts.py  health.py  intel.py  messages.py  personas.py  router.py  settings.py  webhooks.py
backend/src/callscreen/api/ws/: media_stream.py
backend/src/callscreen/core/: call_state.py  emergency.py  recording.py  screening.py  storage.py  twiml.py
backend/src/callscreen/db/: encryption.py  session.py
backend/src/callscreen/intelligence/: __init__.py  base.py  community.py  service.py  trust_score.py
backend/src/callscreen/intelligence/providers/: __init__.py  stir_shaken.py  (+1 more)
backend/src/callscreen/mcp/: server.py
backend/src/callscreen/messaging/: __init__.py  delivery_service.py  forking.py  notifications.py  processor.py
backend/src/callscreen/models/: __init__.py  audit.py  base.py  call.py  community_report.py  contact.py  message.py  number_intel.py  persona.py  settings.py  user.py
backend/src/callscreen/schemas/: auth.py  call.py  community.py  contact.py  message.py  number_intel.py  persona.py  settings.py
backend/src/callscreen/security/: audit.py  auth.py  cors.py  csp.py  input_validation.py  permissions.py  rate_limiter.py  twilio_validator.py  validators.py
backend/src/callscreen/tasks/: celery_app.py  scheduled.py
backend/src/callscreen/utils/: phone.py
backend/src/callscreen/voice/: session.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_flow.py  test_community_api.py  test_contacts.py  test_health.py  test_intel_api.py  test_persona_api.py
backend/tests/unit/: test_audio_converter.py  test_auth.py  test_call_state.py  test_community.py  test_delivery_service.py  test_discord_adapter.py  test_email_adapter.py  test_emergency.py  test_encryption.py  test_forking.py  test_forwarding.py  test_input_validation.py  test_intel_service.py  test_llm.py  test_mcp.py  test_media_stream.py  test_message_processor.py  test_notifications.py  test_persona_conversation.py  test_persona_engine.py  test_phone.py  test_recording.py  test_screening.py  test_sms_adapter.py  test_stir_shaken.py  test_storage.py  test_stt_base.py  test_telegram_adapter.py  test_templates.py  test_trust_score.py  test_tts_base.py  test_twiml.py  test_voice_session.py
(+47 files in other folders)
